@@ -104,7 +104,11 @@ lazy val paths = project("paths")
 lazy val cache = crossProject("cache")(JSPlatform, JVMPlatform)
   .dependsOn(core)
   .jvmSettings(
-    addPathsSources
+    addPathsSources,
+    libraryDependencies ++= Seq(
+      Deps.jansi,
+      Deps.jlineTerminalJansi
+    ),
   )
   .jsSettings(
     name := "fetch-js"
@@ -207,14 +211,15 @@ lazy val benchmark = project("benchmark")
   )
 
 lazy val publish = project("publish")
-  .dependsOn(coreJvm, cacheJvm, okhttp)
+  .dependsOn(coreJvm, cacheJvm)
   .settings(
     shared,
     coursierPrefix,
     libs ++= Seq(
       Deps.argonautShapeless,
       Deps.catsCore,
-      Deps.emoji
+      Deps.emoji,
+      Deps.okhttp
     ),
     resolvers += Resolver.typesafeIvyRepo("releases"), // for "com.lightbend" %% "emoji"
     onlyIn("2.11", "2.12"), // not all dependencies there yet for 2.13
@@ -222,7 +227,7 @@ lazy val publish = project("publish")
 
 lazy val cli = project("cli")
   .dependsOn(bootstrap, coursierJvm, publish)
-  .enablePlugins(ContrabandPlugin, PackPlugin)
+  .enablePlugins(ContrabandPlugin, JlinkPlugin, PackPlugin)
   .settings(
     shared,
     // does this really work?
@@ -252,10 +257,16 @@ lazy val cli = project("cli")
         current / "foo"
     },
     coursierPrefix,
-    unmanagedResources.in(Test) ++= Seq(
-      proguardedJar.in(`bootstrap-launcher`).in(Compile).value,
-      proguardedJar.in(`resources-bootstrap-launcher`).in(Compile).value
-    ),
+    unmanagedResources.in(Test) += proguardedJar.in(`bootstrap-launcher`).in(Compile).value,
+    unmanagedResources.in(Test) ++= Def.taskDyn[Seq[File]] {
+      if (javaMajorVer > 8)
+        // Running into obscure proguard issues when building that one with JDK 11…
+        Def.task(Nil)
+      else
+        Def.task {
+          Seq(proguardedJar.in(`resources-bootstrap-launcher`).in(Compile).value)
+        }
+    }.value,
     scalacOptions += "-Ypartial-unification",
     libs ++= {
       if (scalaBinaryVersion.value == "2.12")
@@ -272,7 +283,40 @@ lazy val cli = project("cli")
         Seq()
     },
     mainClass.in(Compile) := Some("coursier.cli.Coursier"),
-    onlyIn("2.12")
+    // not to get launchers for each sub-command in the jlink package
+    discoveredMainClasses.in(Compile) := Seq("coursier.cli.Coursier"),
+    onlyIn("2.12"),
+    jlinkIgnoreMissingDependency := JlinkIgnore.everything,
+    jlinkOptions := Seq(
+      "--no-header-files",
+      "--no-man-pages",
+      "--strip-debug",
+      "--add-modules", jlinkModules.value.mkString(","),
+      "--output", target.in(jlinkBuildImage).value.getAbsolutePath
+    ),
+    maintainer := developers.value.head.email,
+    packageName.in(Universal) := "standalone",
+    topLevelDirectory.in(Universal) := Some(s"coursier-${version.value}"),
+    executableScriptName := "coursier"
+  )
+
+lazy val `cli-graalvm` = project("cli-graalvm")
+  .dependsOn(cli)
+  .settings(
+    shared,
+    onlyIn("2.12"),
+    coursierPrefix,
+    assemblyMergeStrategy.in(assembly) := {
+      case x if x == "module-info.class" || x.endsWith("/module-info.class") || x.endsWith("\\module-info.class") => MergeStrategy.discard
+      case x =>
+        val oldStrategy = assemblyMergeStrategy.in(assembly).value
+        oldStrategy(x)
+    },
+    mainClass.in(Compile) := Some("coursier.cli.CoursierGraalvm"),
+    libs ++= Seq(
+      "org.bouncycastle" % "bcprov-jdk15on" % "1.62",
+      "org.bouncycastle" % "bcpkix-jdk15on" % "1.62"
+    )
   )
 
 lazy val `cli-native_03` = project("cli-native_03")
@@ -400,6 +444,7 @@ lazy val jvm = project("jvm")
     benchmark,
     publish,
     cli,
+    `cli-graalvm`,
     okhttp,
     coursierJvm,
     `cli-native_03`,
@@ -445,6 +490,7 @@ lazy val `coursier-repo` = project("coursier-repo")
     benchmark,
     publish,
     cli,
+    `cli-graalvm`,
     scalazJvm,
     scalazJs,
     web,
@@ -464,24 +510,37 @@ lazy val addBootstrapJarAsResource = {
 
   import java.nio.file.Files
 
-  packageBin.in(Compile) := {
+  packageBin.in(Compile) := Def.taskDyn {
+
+    val resourcesBootstrapLauncherOptTask: Def.Initialize[Task[Option[File]]] =
+      if (javaMajorVer > 8)
+        Def.task(None)
+      else
+        Def.task {
+          Some(proguardedJar.in(`resources-bootstrap-launcher`).in(Compile).value)
+        }
+
     val originalBootstrapJar = packageBin.in(`bootstrap-launcher`).in(Compile).value
     val bootstrapJar = proguardedJar.in(`bootstrap-launcher`).in(Compile).value
     val originalResourcesBootstrapJar = packageBin.in(`resources-bootstrap-launcher`).in(Compile).value
-    val resourcesBootstrapJar = proguardedJar.in(`resources-bootstrap-launcher`).in(Compile).value
     val source = packageBin.in(Compile).value
 
-    val dest = source.getParentFile / (source.getName.stripSuffix(".jar") + "-with-bootstrap.jar")
+    Def.task {
+      val resourcesBootstrapJarOpt: Option[File] = resourcesBootstrapLauncherOptTask.value
 
-    ZipUtil.addToZip(source, dest, Seq(
-      "bootstrap.jar" -> Files.readAllBytes(bootstrapJar.toPath),
-      "bootstrap-orig.jar" -> Files.readAllBytes(originalBootstrapJar.toPath),
-      "bootstrap-resources.jar" -> Files.readAllBytes(resourcesBootstrapJar.toPath),
-      "bootstrap-resources-orig.jar" -> Files.readAllBytes(originalResourcesBootstrapJar.toPath)
-    ))
+      val dest = source.getParentFile / (source.getName.stripSuffix(".jar") + "-with-bootstrap.jar")
 
-    dest
-  }
+      ZipUtil.addToZip(source, dest, Seq(
+        "bootstrap.jar" -> Files.readAllBytes(bootstrapJar.toPath),
+        "bootstrap-orig.jar" -> Files.readAllBytes(originalBootstrapJar.toPath),
+        "bootstrap-resources-orig.jar" -> Files.readAllBytes(originalResourcesBootstrapJar.toPath)
+      ) ++ resourcesBootstrapJarOpt.map { resourcesBootstrapJar =>
+        "bootstrap-resources.jar" -> Files.readAllBytes(resourcesBootstrapJar.toPath)
+      })
+
+      dest
+    }
+  }.value
 }
 
 lazy val addPathsSources = Seq(
